Fix created by logo alignment in the footer

--- a/less/footer/branding.less
+++ b/less/footer/branding.less
@@ -30,7 +30,7 @@
 
       span {
         display: inline-block;
-        margin: 4px 1ch 0 0;
+        margin: 3px 1ch 0 0;
       }
 
       .footer-branded-crafted-img {
